fix: [WA-899] Card heading wrapping in card signpost

--- a/docroot/themes/custom/wateraid/components/card/card.scss
+++ b/docroot/themes/custom/wateraid/components/card/card.scss
@@ -171,6 +171,7 @@
 
     .card__heading {
       @include h5();
+      overflow-wrap: normal;
       @include desktop() {
         @include h3();
       }
